<resources>
    <string name="app_name">SchoolApp</string>
    <string name="students">Etudiants</string>
    <string name="teachers">Professeurs</string>
    <string name="course">Cours</string>
    <string name="modules">Modules</string>
    <string name="classes">Classes</string>
    <string name="save">Enregistrer</string>
    <string name="francais">FRANCAIS</string>
    <string name="english">ANGLAIS</string>
    <string name="german">ALLEMAND</string>
    <string name="language">Choisir une langue</string>
    <string name="lang">Langue</string>
    <string name="about">A propos</string>
    <string name="rechercher">Rechercher</string>
    <string name="delete">Supprimer</string>
    <string name="edit">Modifier</string>
    <string name="add">ajouter</string>
    <string name="firstName">Prénom</string>
    <string name="address">Adresse</string>
    <string name="lastName">Nom</string>
    <string name="details">Détails</string>
    <string name="errorEmptyField">Champs vides</string>
    <string name="classe">Classe</string>
    <string name="name">Nom</string>
    <string name="NomClasse">Nom de la classe</string>
    <string name="prenomRequis">Prénom requis</string>
    <string name="nomRequis">Nom requis</string>
    <string name="adresseRequise">Adresse requise</string>
    <string name="NomClasseRequis">Nom de classe requis</string>
    <string name="avril">Avril</string>
    <string name="ajout">Ajout réussi</string>
    <string name="deletesuccess">Suppression réussie</string>
    <string name="saved">Modification effectuée</string>
    <string name="module">Module</string>
</resources>
