<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorAccent"

            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="com.schoolapp.schoolapp.LanguageActivity"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="200dp"
        tools:layout_margin="20dp">


        <Button
            android:id="@+id/ENG"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="0dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:background="@color/colorPrimary"
            android:clickable="true"
            android:onClick="changeToEN"
            android:text="@string/english"
            app:layout_constraintLeft_toRightOf="@+id/ALL"
            app:layout_constraintRight_toLeftOf="@+id/FR"
            app:layout_constraintTop_toTopOf="parent" />


        <Button
            android:id="@+id/ALL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:background="@color/colorPrimary"
            android:onClick="changeToALL"
            android:text="@string/german"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <Button
            android:id="@+id/FR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="0dp"
            android:layout_marginTop="0dp"
            android:background="@color/colorPrimary"
            android:onClick="changeToFR"
            android:text="@string/francais"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </LinearLayout>

</LinearLayout>